--- a/CourseProject/index.html
+++ b/CourseProject/index.html
@@ -38,6 +38,9 @@
     <h2>Achievements of Millennium Development Goals</h2>
     <p>Guanlin Hou<br/></p>
   </hgroup>
+    <a href="https://github.com/guanlinhou/Shiny/zipball/gh-pages" class="example">
+     Download
+    </a>
   <article></article>  
 </slide>
     
@@ -52,7 +55,7 @@
 
 <p>The application &quot;Millennium Development Goals (MDGs)&quot; is deployed here: <a href="https://guanlinhou.shinyapps.io/MDGs/">https://guanlinhou.shinyapps.io/MDGs/</a></p>
 
-<p>The dataset used and source code for ui.R and server.R files can be found here: <a href="https://github.com/guanlinhou/MDGs">https://github.com/guanlinhou/MDGs</a></p>
+<p>The dataset used and source code for ui.R and server.R files can be found here: <a href="https://github.com/guanlinhou/Shiny">https://github.com/guanlinhou/Shiny</a></p>
 
   </article>
   <!-- Presenter Notes -->
